--- a/assets/src/css/bubble-skin.scss
+++ b/assets/src/css/bubble-skin.scss
@@ -125,6 +125,7 @@
 				bottom: 25px;
 				right: 90px;
 				z-index: 19;
+				pointer-events: none;
 			}
 		}
 
@@ -138,6 +139,7 @@
 				left: 40px;
 				bottom: 25px;
 				z-index: 19;
+				pointer-events: none;
 			}
 		}
 
@@ -179,10 +181,13 @@
 				padding-top: 8px;
 			}
 
-			.vjs-menu-item:hover {
-				font-weight: 900;
-				background-color: unset !important;
-				color: #cdc5c5 !important;
+			.vjs-menu-item:not(.vjs-selected):hover {
+				font-weight: 400;
+				background-color: rgba(255, 255, 255, 0.1);
+			}
+
+			.vjs-menu-item.vjs-selected:hover {
+				background-color: #fff !important;
 			}
 	
 			span::before {
@@ -251,6 +256,10 @@
 	}
 
 	@container godam-player-bubble-skin (max-width: 480px) {
+
+		.video-js .vjs-big-play-button {
+			left: 55%;
+		}
 
 		.video-js .vjs-control-bar {
 			margin: -55px auto 0;
@@ -396,6 +405,7 @@
 			width: 8em;
 			bottom: 0 !important;
 			left: 0 !important;
+			z-index: 19;
 
 			.vjs-menu-content {
 
@@ -450,15 +460,51 @@
 		}
 	}
 
-	@container godam-player-bubble-skin (min-width: 768px) {
-	
-		.vjs-current-time {
-			left: 65px !important;
+	@media screen and (min-width: 768px) {
+
+		.video-js.vjs-fullscreen .vjs-control-bar {
+
+			justify-content: center;
+
+			.vjs-duration {
+				position: relative !important;
+				display: flex !important;
+				align-items: center;
+				order: 1 !important;
+				z-index: 19;
+				margin-left: -65px;
+				transform: translateY(-50%);
+
+				.vjs-duration-display {
+					position: static !important;
+					padding-left: 0;
+					right: unset !important;
+					bottom: unset !important;
+				}
+			}
+
+			.vjs-current-time {
+				position: relative !important;
+				display: flex !important;
+				align-items: center;
+				order: 3 !important;
+				z-index: 19;
+				margin-right: -65px;
+				transform: translateY(-50%);
+				left: unset !important;
+
+				.vjs-current-time-display {
+					position: static !important;
+					padding-right: 0;
+					left: unset !important;
+					bottom: unset !important;
+				}
+			}
+
+			.vjs-progress-control {
+				order: 2 !important;
+				margin: 0;
+			}
 		}
-	  
-		.vjs-duration-display {
-			right: 100px !important;
-		}
-	  
 	}
 }
