--- a/assets/src/css/classic-skin.scss
+++ b/assets/src/css/classic-skin.scss
@@ -8,6 +8,7 @@
 		color: #1c1b1b !important;
 		height: 60px !important;
 		width: 60px !important;
+		left: 53% !important;
 
 		span::before {
 			font-size: 38px !important;
@@ -414,7 +415,7 @@
 
 		.vjs-menu {
 		   background-color: #2b333f;
-		   z-index: 10;
+		   z-index: 19;
 		}
 
 		.vjs-time-control {
@@ -542,6 +543,7 @@
 		.video-js .vjs-big-play-button {
 			height: 50px;
 			width: 50px;
+			left: 55% !important;
 
 			span::before {
 				font-size: 1.7rem;
