--- a/assets/src/css/minimal-skin.scss
+++ b/assets/src/css/minimal-skin.scss
@@ -86,6 +86,10 @@
 
 	@container godam-player-minimal-skin (max-width: 480px) {
 		
+		.video-js .vjs-big-play-button {
+			left: 55%;
+		}
+
 		.video-js .vjs-control-bar {
 			height: 6em !important;
 
@@ -191,6 +195,7 @@
 
 		.video-js .vjs-menu {
 			width: 8em;
+			z-index: 19;
 
 			.vjs-menu-content {
 
