--- a/pages/video-editor/video-control.css
+++ b/pages/video-editor/video-control.css
@@ -84,7 +84,7 @@
     border-radius: 0 20px 20px 0;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0;
     align-content: center;
     justify-content: center;
     padding-left: 0;
@@ -112,7 +112,7 @@
 
 .vertical-image-cta-container {
     flex-direction: column;
-    width: 300px;
+    width: 250px;
     border-radius: 36px;
     padding-top: 20px;
 
